cc_binary(
    name = "bench",
    srcs = ["bench.cc"],
    deps = [
        ":impls",
        "@benchmark//:benchmark_main",
    ],
)

cc_library(
    name = "impls",
    hdrs = ["impls.h"],
    deps = [
        "@com_github_google_glog//:glog",
        "@hwy//hwy/contrib/sort:vqsort",
        "@intel-x86-simd-sort-2//:intel-x86-simd-sort",
        "@tbb",
        "@pdqsort",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    linkstatic = True,
    deps = [
        ":impls",
        "@com_google_googletest//:gtest_main",
    ],
)
