load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Required by hwy
http_archive(
    name = "bazel_skylib",
    sha256 = "f7be3474d42aae265405a592bb7da8e171919d74c16f082a5457840f06054728",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

ONETBB_VERSION = "2021.7.0-rc1"  # 2021.5.0 doesn't build on clang-14 or gcc-11.

http_archive(
    name = "tbb",
    sha256 = "46bc6298a957dc1b0ae80a3e8b2fb1ff689a2f436e350c88cf12a425a3e87eae",
    strip_prefix = "oneTBB-%s" % ONETBB_VERSION,
    url = "https://github.com/oneapi-src/oneTBB/archive/v%s.zip" % ONETBB_VERSION,
)

BENCHMARK_VERSION = "1.7.0"

http_archive(
    name = "benchmark",
    sha256 = "e0e6a0f2a5e8971198e5d382507bfe8e4be504797d75bb7aec44b5ea368fa100",
    strip_prefix = "benchmark-%s" % BENCHMARK_VERSION,
    url = "https://github.com/google/benchmark/archive/v%s.zip" % BENCHMARK_VERSION,
)

GFLAG_VERSION = "2.2.2"

http_archive(
    name = "com_github_gflags_gflags",
    sha256 = "34af2f15cf7367513b352bdcd2493ab14ce43692d2dcd9dfc499492966c64dcf",
    strip_prefix = "gflags-%s" % GFLAG_VERSION,
    urls = ["https://github.com/gflags/gflags/archive/v%s.tar.gz" % GFLAG_VERSION],
)

GLOG_VERSION = "0.6.0"

http_archive(
    name = "com_github_google_glog",
    sha256 = "122fb6b712808ef43fbf80f75c52a21c9760683dae470154f02bddfc61135022",
    strip_prefix = "glog-%s" % GLOG_VERSION,
    urls = ["https://github.com/google/glog/archive/v%s.zip" % GLOG_VERSION],
)

HIGHWAY_VERSION = "1.0.2"

http_archive(
    name = "hwy",
    sha256 = "699b05acf15680e5fce6ed5ab629868984520b9eb4382fc7c04af2c5c3a310b4",
    strip_prefix = "highway-%s" % HIGHWAY_VERSION,
    url = "https://github.com/google/highway/archive/%s.zip" % HIGHWAY_VERSION,
)

X86_SIMD_SORT_VERSION = "7d7591cf5927e83e4a1e7c4b6f2c4dc91a97889f"

http_archive(
    name = "intel-x86-simd-sort",
    sha256 = "cfa256d570ac04ec353c9dd3c7131232d7ec021416befec182ca004dce742989",
    strip_prefix = "x86-simd-sort-%s" % X86_SIMD_SORT_VERSION,
    url = "https://github.com/intel/x86-simd-sort/archive/%s.zip" % X86_SIMD_SORT_VERSION,
    build_file = "@//:intel-x86-simd-sort.BUILD",
)

CCE_VERSION = "c6cd079bef5836293ca18e55aac6ef05134c3a9d"

http_archive(
    name = "hedron_compile_commands",
    sha256 = "9b5683e6e0d764585f41639076f0be421a4c495c8f993c186e4449977ce03e5e",
    strip_prefix = "bazel-compile-commands-extractor-%s" % CCE_VERSION,
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/%s.tar.gz" % CCE_VERSION,
)

GOOGLETEST_VERSION = "1.13.0"
http_archive(
  name = "com_google_googletest",
  sha256 = "ffa17fbc5953900994e2deec164bb8949879ea09b411e07f215bfbb1f87f4632",
  strip_prefix = "googletest-%s" % GOOGLETEST_VERSION,
  url = "https://github.com/google/googletest/archive/refs/tags/v%s.zip" % GOOGLETEST_VERSION,
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()
